conf/envoy/envoy.yml
static_resources:
  listeners:
  # 监听 80 端口：HTTP、WebSocket
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: web
          route_config:
            virtual_hosts:
            - name: web
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: web}
          http_filters:
            - name: envoy.router
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 22280
    filter_chains:
    - filters:
        - name: envoy.http_connection_manager
          config:
            upgrade_configs:
            - upgrade_type: websocket
            codec_type: auto
            stat_prefix: web
            route_config:
              virtual_hosts:
                - name: web
                  domains: ["*"]
                  routes:
                    - match: {prefix: "/"}
                      route: {cluster: ws}
            http_filters:
              - name: envoy.router
  # 监听 22 端口：SSH
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 22
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ssh
          cluster: ssh
  clusters:
  # Web 界面节点
  - name: web
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 1s
    hosts:
    - socket_address:
        address: nginx
        port_value: 80
  # 浏览器桌面通知 / WebSocket 节点
  - name: ws
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 1s
    hosts:
    - socket_address:
        address: noty
        port_value: 22280
  # 代码仓库 SSH 传输节点
  - name: ssh
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    connect_timeout: 1s
    hosts:
    - socket_address:
        address: php
        port_value: 22
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
